<resources>
    <string name="app_name" translatable="false">FileCatch</string>
    <string name="title_activity_send">Send with FileSender</string>
    <string name="action_settings">Settings</string>
    <string name="kick">Kick</string>
    <string name="con_clients">Connected Devices: %d</string>
    <string name="devices">Devices</string>
    <string name="files">Files</string>
    <string name="remove">Remove</string>
    <string name="file_select">Select a file</string>
    <string name="sharing_file">Sharing File…</string>
    <string name="fileshare_failed">File share Failed</string>
    <string name="waiting_for_client">Waiting for client…</string>
    <string name="select_client">Select a device</string>
    <string name="no_files">No files selected yet</string>
    <string name="no_clients">No Devices connected yet</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="permission_denied">Required permission denied</string>
    <string name="permission_denied_body">Permission is needed to save received files. Please grant it</string>
    <string name="ok">OK</string>
    <string name="server_start_failed">Failed to start server</string>
    <string name="inactive">Inactive</string>
    <string name="running">Running</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="login_failed">Login failed</string>
    <string name="connection_lost">Connection lost</string>
    <string name="connection_lost_by_server">Server closed connection to this device. %s</string>
    <string name="connection_lost_by_client">Lost connection to server. %s</string>
    <string name="kicked_by_server">Kicked by server</string>
    <string name="server_closed">Server was closed</string>
    <string name="connection_failed">Connection failed</string>
    <string name="serv_name">Connected with %s</string>
    <string name="no_files_available">No files available yet</string>
    <string name="accept_title">Do you want to accept the file share?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="receiving_file">Receiving File…</string>
    <string name="file_open_failed">Failed to open file \'%s\'</string>
    <string name="qr_code">QR Code</string>
    <string name="starting">Starting</string>
    <string name="failed_to_start_hotspot_title">Failed to start hotspot</string>
    <string name="hotspot_already_enabled">Hotspot is already enabled</string>
    <string name="disallowed_to_start_hotspot">Disallowed to start hotspot</string>
    <string name="failed_to_start_hotspot">Failed to start hotspot: %s</string>
    <string name="hotspot_name">Name: %s</string>
    <string name="hotspot_password">Password: %s</string>
    <string name="icon">Icon</string>
    <string name="add_app">Add App</string>
    <string name="add_file">Add File</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="connecting_to_wifi">Connecting to Wifi</string>
    <string name="connecting_to_wifi_body">Connecting to \'%s\'</string>
    <string name="abort">Abort</string>
    <string name="warning">Warning</string>
    <string name="mobile_data_warning">Mobile Data is activated. Please deactivate while using this app to avoid problems</string>
    <string name="help">Help</string>
    <string name="third_party_licenses">Third Party Licenses</string>
    <string name="attempting_to_connect">Attempting to connect…</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="not_enough_storage">You don\'t have enough storage to receive \'%s\'. The file is %s big. You need %s more storage to receive this file.</string>
    <string name="override_warning">File \'%s\' already exists, do you want to override it?</string>
    <string name="help_connecting">1. Connecting</string>
    <string name="help_connecting_qr">1.1 Scan QR-Code</string>
    <string name="help_connecting_qr_1">• Click on the QR-Code button in the top right</string>
    <string name="help_connecting_qr_2">• Scan the QR-Code</string>
    <string name="help_connecting_qr_3">• Wait while the app is connecting you to the hotspot</string>
    <string name="help_connecting_qr_4">• If nothing happens for a long time, click abort and try to either scan the QR-Code again or connect to the hotspot manually</string>
    <string name="help_connecting_manual_connection">1.2 Manual connection</string>
    <string name="help_connecting_manual_connection_1">• Connect to the hotspot manually. The name and the password need to be given to you by the sending device</string>
    <string name="help_connecting_manual_connection_2">• Click the start button</string>
    <string name="help_connecting_already_connected">1.3 Already connected</string>
    <string name="help_connecting_already_connected_1">• Just click the start button</string>
    <string name="help_receiving">2. Receiving</string>
    <string name="help_receiving_downloading">2.1 Downloading a file</string>
    <string name="help_receiving_downloading_1">• Click on one of the files in the list or wait for the sending device to send a request</string>
    <string name="help_receiving_downloading_2" >• Accept the file share by clicking on Yes. If the file already exists the app will ask whether you want to override it. The app will also check whether you have enough storage.</string>
    <string name="help_receiving_downloading_3">• Don\'t close the app while the file share is still in progress</string>
    <string name="help_history">2.2 History</string>
    <string name="help_history_1">• Open by clicking History on the start screen</string>
    <string name="help_history_2">• Click on the items to open them</string>
    <string name="help_history_3">• The list always updated and will automatically remove deleted files</string>
    <string name="help_starting">1. Starting</string>
    <string name="help_starting_80">1.1 Android 8.0+</string>
    <string name="help_starting_80_1">• Click the start button</string>
    <string name="help_starting_80_2">• On Android 8.0+ the app will create a hotspot with a random name and password</string>
    <string name="help_starting_80_3">• You will get a QR-Code that other devices can scan to connect to your hotspot. You can open it by clicking on the QR-Code icon in the top right</string>
    <string name="help_starting_80_4">• The name and the password of your hotspot is displayed in the top left section, if the QR-Code connect does not work</string>
    <string name="help_starting_80_5">• This will not change your hotspot settings</string>
    <string name="help_starting_80_6">• Important: If devices can\'t see the wifi network, check whether your hotspot is really active by looking for the hotspot symbol in your message bar or looking it up in the settings. There seems to be a bug in the implementation of this feature on some devices that causes random closes of the hotspot</string>
    <string name="help_starting_manual">1.2 Before Android 8.0</string>
    <string name="help_starting_manual_2">• The App will start your normal hotspot with your settings</string>
    <string name="help_starting_manual_3">• Other devices will need to manually connect to the hotspot</string>
    <string name="help_starting_manual_4">• Name and password of the hotspot cannot be accessed. You need to manually look it up in the settings</string>
    <string name="help_adding">2. Adding files</string>
    <string name="help_adding_files">2.1 Adding a file</string>
    <string name="help_adding_1">• Click on the Add button in the bottom right corner</string>
    <string name="help_adding_files_1">• Click on Add File</string>
    <string name="help_adding_files_2">• Select a file in the opened file chooser</string>
    <string name="help_adding_files_3">• The file will be added to your file list and will also be shown on every connected device now</string>
    <string name="help_adding_app">2.2 Adding an app</string>
    <string name="help_adding_app_1">• Click on Add App</string>
    <string name="help_adding_app_2">• Click on one of the apps in the list</string>
    <string name="help_adding_app_3">• The apk of the app will be added to the list and will also be shown on every connected device now</string>
    <string name="help_sending">3. Sending</string>
    <string name="help_sending_1">• You can either click on one of your selected files and then select a device to send it to or wait for a device to request it</string>
    <string name="android_10_wifi_warning">Starting with Android 10 the app cannot activate wifi itself. Please activate wifi</string>
    <string name="failed_to_start_hotspot_try_manually">Failed to start hotspot. Please try again or enable it manually</string>
    <string name="failed_to_stop_hotspot_try_manually">Failed to stop hotspot. If you want to disable it, you have to do it manually</string>
    <string name="no_files_received_yet">No files received yet</string>
    <string name="file_history">File History</string>
    <string name="about_email" translatable="false">Email: fabianfg.dev@gmail.com</string>
    <string name="about_author">Author: Fabian FG</string>
    <string name="about_issues" >Found an issue? Email me or open an issue on github</string>
    <string name="about_github" translatable="false">GitHub: https://github.com/FunGamesLeaks/FileSender/</string>
    <string name="about_betatester">Thanks to all betatesters:</string>
    <string name="about_betatester_body" translatable="false">Jan, Jannis, Jonah, Jonas, Lukas, Nils, Philipp</string>
    <string name="about">About</string>
    <string name="version_format" translatable="false">v%s</string>
    <string name="send_app">Didn\'t your friends install FileCatch?</string>
    <string name="send_app_button">Send FileCatch</string>
    <string name="fail_reason_client_disconnected">The device got disconnected</string>
    <string name="fail_reason_client_denied">The device rejected the file share</string>
    <string name="fail_reason_client_not_enough_storage">The device did not have enough storage to receive this file</string>
    <string name="fail_reason_timeout">The device did not answer in time</string>
    <string name="fail_reason_failed_to_open_input_stream">The file could not be read</string>
    <string name="about_icon">Icon made by https://www.flaticon.com/authors/those-icons</string>
</resources>
