<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.fabianfg.filesender.frontend.ui.main.MainActivity">
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/baseline_help_outline_black_48"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_licenses"
        android:orderInCategory="100"
        android:title="@string/third_party_licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
